tests/golden/fixtures/syntax-mixed-case-registers-and-flags/expected.err
Error: unknown identifier 'x' in numeric expression
   ╭─[ tests/golden/fixtures/syntax-mixed-case-registers-and-flags/input.k65:4:5 ]
   │
 4 │   Y=x
   │     ┬  
   │     ╰── here
───╯
